Add part 2 of local LLM series

--- a/hugo.toml
+++ b/hugo.toml
@@ -17,6 +17,7 @@ theme = 'mainroad'
 [Params]
   description = "Yet another blog about coding"
   post_meta = ["date"]
+  mainSections = ["posts"]
   readmore = true
   toc = false
   customCSS = ["css/custom.css"]
