Add part 4 of local llm models series + update style for code blocks

--- a/hugo.toml
+++ b/hugo.toml
@@ -25,3 +25,7 @@ theme = 'mainroad'
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
+
+[markup]
+  [markup.highlight]
+    style = 'pygments'
